force-app/main/default/objects/OneCRM__Income_Line_Item__c/OneCRM__Income_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Income Line Item</label>
    <nameField>
        <displayFormat>ILI-{MM}{YY}{000000}</displayFormat>
        <label>Income Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>