force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/Campaign_SubType__c.field-meta.xml
<CustomField>
    <fullName>Campaign_SubType__c</fullName>
    <formula>TEXT( OneCRM__Related_Campaign__r.SubType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign SubType</label>
    <type>Text</type>
</CustomField>