force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <formula>TEXT( OneCRM__Related_Campaign__r.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Type</label>
    <type>Text</type>
</CustomField>