force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/Campaign_Year__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Year__c</fullName>
    <formula>OneCRM__Related_Campaign__r.Hebrew_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Year</label>
    <type>Text</type>
</CustomField>