force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/Created_By_Matching_System__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Matching_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By Matching System</label>
    <type>Checkbox</type>
</CustomField>