force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <formula>TEXT (  OneCRM__Related_Campaign__r.Detail__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail</label>
    <type>Text</type>
</CustomField>