force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Amount__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Amount__c</fullName>
    <label>Amount (Income Line)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>