force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>