force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Donor__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>