force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Icon__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Icon__c</fullName>
    <formula>IF(
		        OneCRM__Income__r.RecordType.Name = &quot;Payment&quot;,
		        IF(
			        AND(
				        TEXT(OneCRM__Income__r.OneCRM__Status__c) = &quot;Success&quot;,
				        TEXT(OneCRM__Income__r.OneCRM__Payment_Type__c) = &quot;Credit Card&quot;,
				        ISBLANK(OneCRM__Income__r.OneCRM__TransactionId__c),
					    ISBLANK(OneCRM__Income__r.OneCRM__Status_Code__c),
					    ISBLANK(OneCRM__Income__r.OneCRM__StatusReason__c),
					    OR(
						    ISBLANK(OneCRM__Income__r.OneCRM__StatusText__c),
	                        OneCRM__Income__r.OneCRM__StatusText__c != &quot;Recorded without Processing&quot;
						    ),
					    ISBLANK(OneCRM__Income__r.OneCRM__StatusID__c)
			        ),
			        &quot;recordedWithoutProcessingInCRM&quot;,
		        TEXT(OneCRM__Income__r.OneCRM__Status__c)
		),
	        IF(
		        OneCRM__Amount_Outstanding__c = 0,
		        &quot;pledgeIsPaidOff&quot;,
		        &quot;pledgeIsNotPaidOff&quot;
	        )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon</label>
    <type>Text</type>
</CustomField>