force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Income__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Income__c</fullName>
    <label>Transaction</label>
    <referenceTo>OneCRM__Income__c</referenceTo>
    <relationshipLabel>Income Line Items</relationshipLabel>
    <relationshipName>Income_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>