force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Is_Tax_Deductible__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Is_Tax_Deductible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tax Deductible</label>
    <type>Checkbox</type>
</CustomField>