force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Paid__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Paid__c</fullName>
    <label>Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>