force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Positive_Amount__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Positive_Amount__c</fullName>
    <formula>ABS(OneCRM__Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Positive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>