force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Ratio__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Ratio__c</fullName>
    <formula>OneCRM__Amount__c / OneCRM__Income__r.OneCRM__Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>