force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Related_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Income Line Items</relationshipLabel>
    <relationshipName>Income_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>