force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The &quot;Related Contact&quot; field on the Income Line Item inherited from the parent income</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Income line items</relationshipLabel>
    <relationshipName>Income_line_items</relationshipName>
    <type>Lookup</type>
</CustomField>