force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Related_Income__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Related_Income__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>used to related a &quot;payment line item&quot; to the charge it&apos;s paying for.</description>
    <label>Income</label>
    <referenceTo>OneCRM__Income__c</referenceTo>
    <relationshipLabel>Payment Line Items</relationshipLabel>
    <relationshipName>Related_Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>