force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Related_Income_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Related_Income_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the payment line item to the charge line item</description>
    <label>Related Income Line Item</label>
    <referenceTo>OneCRM__Income_Line_Item__c</referenceTo>
    <relationshipLabel>Income Line Items</relationshipLabel>
    <relationshipName>Income_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>