force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__SubType__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aliyah</fullName>
            </value>
            <value>
                <fullName>Rosh Hashana</fullName>
            </value>
            <value>
                <fullName>Shabbos</fullName>
            </value>
            <value>
                <fullName>Shavuos</fullName>
            </value>
            <value>
                <fullName>Simchas Torah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>