force-app/main/default/objects/OneCRM__Income_Line_Item__c/fields/OneCRM__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Transaction_Date__c</fullName>
    <formula>TEXT(OneCRM__Income__r.OneCRM__Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Date</label>
    <type>Text</type>
</CustomField>